syntax = "proto3";

package eventstore.connectors;

import "google/protobuf/wrappers.proto";

option csharp_namespace = "EventStore.Connectors.ControlPlane.Contracts";

enum ClusterNodeState {
  Unmapped        = 0;
  Leader          = 1;
  Follower        = 2;
  ReadOnlyReplica = 3;
}

message ClusterNode {
  string           node_id = 1;
  ClusterNodeState state   = 2;
}

message Connector {
  string                                   connector_id = 1;
  int32                                    revision     = 2;
  map<string, google.protobuf.StringValue> settings     = 3;  // optional
  ClusterNodeState                         affinity     = 4;  // inside settings but typed here for convenience
}

message NodeAssignment {
  ClusterNode        node       = 1;
  repeated Connector assigned   = 2;
  repeated Connector stationary = 3;
  repeated Connector revoked    = 4;
}
